{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 28,
  "lineage": "b3a46ab7-a3fb-3dbf-3b71-48b3868c44d8",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f602e180348c4ad9",
            "arn": "arn:aws:ec2:us-east-1:125941635234:elastic-ip/eipalloc-0f602e180348c4ad9",
            "association_id": "eipassoc-02fc7436cf9f0115c",
            "domain": "vpc",
            "id": "eipalloc-0f602e180348c4ad9",
            "instance": "i-0e133fad383d9590c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cbfe3984717b8fcf",
            "private_dns": "ip-10-0-1-20.ec2.internal",
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-54-86-159-130.compute-1.amazonaws.com",
            "public_ip": "54.86.159.130",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-infra-node-b-eip"
            },
            "tags_all": {
              "Name": "dermatech-infra-node-b-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:125941635234:instance/i-0a0a8b04050b5b035",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0a8b04050b5b035",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b6f019eb6ce74b47"
              }
            ],
            "primary_network_interface_id": "eni-0b6f019eb6ce74b47",
            "private_dns": "ip-10-0-1-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-54-89-90-147.compute-1.amazonaws.com",
            "public_ip": "54.89.90.147",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-095b0bd87657c8546",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d35af8f15a990259",
            "tags": {
              "Name": "dermatech-infra-node-b-server"
            },
            "tags_all": {
              "Name": "dermatech-infra-node-b-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-03fcb4afbee317c75"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "125941635234",
            "id": "i-0a0a8b04050b5b035",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.aws_security_group.app_sg",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125941635234:security-group/sg-03fcb4afbee317c75",
            "description": "Security Group for Application Worker Nodes (Bastion Protected)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Unrestricted Outbound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fcb4afbee317c75",
            "ingress": [
              {
                "cidr_blocks": [
                  "100.52.22.97/32"
                ],
                "description": "Microservices Traffic from QA Gateway",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [
                  "100.52.22.97/32"
                ],
                "description": "SSH Access from QA Bastion Only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dermatech-infra-node-b-sg",
            "name_prefix": "",
            "owner_id": "125941635234",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dermatech-infra-node-b-sg"
            },
            "tags_all": {
              "Name": "dermatech-infra-node-b-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea04816215620f22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "125941635234",
            "id": "sg-03fcb4afbee317c75",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125941635234:internet-gateway/igw-0ef61c08e609fd3b1",
            "id": "igw-0ef61c08e609fd3b1",
            "owner_id": "125941635234",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-infra-node-b-igw"
            },
            "tags_all": {
              "Name": "dermatech-infra-node-b-igw"
            },
            "vpc_id": "vpc-0ea04816215620f22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125941635234:route-table/rtb-0221f7aa6fc9b9aee",
            "id": "rtb-0221f7aa6fc9b9aee",
            "owner_id": "125941635234",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ef61c08e609fd3b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dermatech-infra-node-b-public-rt"
            },
            "tags_all": {
              "Name": "dermatech-infra-node-b-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea04816215620f22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "125941635234",
            "id": "rtb-0221f7aa6fc9b9aee",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bf13bdced7e210a",
            "region": "us-east-1",
            "route_table_id": "rtb-0221f7aa6fc9b9aee",
            "subnet_id": "subnet-0d35af8f15a990259"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125941635234:subnet/subnet-0d35af8f15a990259",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d35af8f15a990259",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "125941635234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-infra-node-b-public-subnet"
            },
            "tags_all": {
              "Name": "dermatech-infra-node-b-public-subnet"
            },
            "vpc_id": "vpc-0ea04816215620f22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "125941635234",
            "id": "subnet-0d35af8f15a990259",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125941635234:vpc/vpc-0ea04816215620f22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0887513f728889172",
            "default_route_table_id": "rtb-0805712785788684f",
            "default_security_group_id": "sg-00e43baf9337deec9",
            "dhcp_options_id": "dopt-03340706d64eb64c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea04816215620f22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0805712785788684f",
            "owner_id": "125941635234",
            "region": "us-east-1",
            "tags": {
              "Environment": "infra-node-b",
              "Name": "dermatech-infra-node-b-vpc"
            },
            "tags_all": {
              "Environment": "infra-node-b",
              "Name": "dermatech-infra-node-b-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "125941635234",
            "id": "vpc-0ea04816215620f22",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}